tests/src/frontend/typechecking/invalid/tunder_generic_6.sk
fun main(): void {
  x: _ = "No";
  print_raw(x)
}
